require("./setupTrace");
const trace = require("./run").bind(null, true);
const D = require("../main");

test("DOM time traveling", function() {
  global.console = { log: jest.fn() };
  document.body.innerHTML = `<div id="root"></div>`;
  D.evalThunk(require("./__fixtures__/dom"));
  const mod = trace();
  const c1 = D.Trace.checkpoint();
  D.Trace.DOM.track(document.getElementById("root"));
  mod.changeDom1();
  trace(true);
  expect(document.body).toMatchSnapshot();
  D.Trace.checkpoint();
  mod.changeDom2();
  trace(true);
  expect(document.body).toMatchSnapshot();
  const c2 = D.Trace.checkpoint();
  mod.changeDom3();
  trace(true);
  expect(document.body).toMatchSnapshot();
  const c3 = D.Trace.checkpoint();
  mod.changeDom4();
  trace(true);
  expect(document.body).toMatchSnapshot();
  D.Trace.undo(c3);
  expect(document.body).toMatchSnapshot();
  mod.changeDom4();
  trace(true);
  expect(document.body).toMatchSnapshot();
  D.Trace.undo(c2);
  expect(document.body).toMatchSnapshot();
  mod.changeDom3();
  trace(true);
  expect(document.body).toMatchSnapshot();
  mod.changeDom4();
  trace(true);
  expect(document.body).toMatchSnapshot();
  D.Trace.undo(c1);
  expect(document.body).toMatchSnapshot();
});
